update from local

--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,11 @@
     ],
     "homepage": "https://github.com/rubel9997/multi-file-logger",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "Rubel Mahamud",
-            "email": "rubelmahamud9997@gmail.com",
-            "role": "Developer"
-        }
-    ],
+    "authors": [{
+        "name": "Rubel Mahamud",
+        "email": "rubelmahamud9997@gmail.com",
+        "role": "Developer"
+    }],
     "require": {
         "php": "^8.1",
         "illuminate/support": "^11.20"
@@ -54,6 +52,6 @@
             }
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
